# tapdance

./: README.md  setup_decoylist_autoupdate.md  startup.sh
gobbler/: Makefile  README.md  build-gobbler.sh  durationsample.go  durationsample_test.go  gobbler.go  graphite.go  graphite_test.go  metalink.go  metalink_test.go
libtapdance/: Makefile  decode.c  elligator2.c  elligator2.h  genkey.c  loadkey.c  loadkey.h  ssl_api.c  ssl_api.h  tapdance.c  tapdance.h  tapdance_rst_spoof.c  tapdance_rust_util.c  test-tapdance.c
pfring-framework/userland/: Makefile
proto/: Makefile  signalling.proto
scripts/: README  describe-build  netstat.py  squid-conn-stats  squid-cpu-stats  tapdance-build-notes.txt  tapdance-build.sh  tapdance-client-build.sh  tapdance-client-prereqs.sh  tapdance-prereqs.sh  tcp-buf.sh  util.sh
scripts/log-stats/: README  bound-sessions.py  business-hours.py  follow.go  go-sess.sh  listgen.py  reconnect-times.py  sess.gnuplot  session-length.py  (+1 more)
sysvinit/: README  install.sh
tapdance-rust-logic/: Cargo.toml  cargo_test.sh
tapdance-rust-logic/src/: bufferable_ssl.rs  bufferable_tcp.rs  buffered_tunnel.rs  c_api.rs  client_driver.rs  client_passive_driver.rs  client_ssl_driver.rs  covert_tcp_driver.rs  direction_pair.rs  elligator.rs  event_hook.rs  evented_ssl_eavesdropper.rs  flow_tracker.rs  logging.rs  mem_open_ssl.rs  process_packet.rs  protocol_cli2sta.rs  protocol_outer_framing.rs  protocol_sta2cli.rs  rereg_queuer.rs  rust_tapdance.rs  session_error.rs  session_id.rs  stream_traits.rs  tapdance_session.rs  token_map.rs  util.rs
(+27 files in other folders)
